<?xml version="1.0"?>
<package format="3">
    <name>doorbell_detector</name>
    <version>0.1.0</version>
    <description>
        Doorbell detection node for ROS 2 using YAMNet. The node can read audio either from a ROS audio topic or directly from an external microphone using ALSA/sounddevice.
    </description>

    <maintainer email="you@example.com">Your Name</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_python</buildtool_depend>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>audio_common_msgs</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>